Refactored the icon section on the home page, and completed the link hover effects there

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </li>
                 <li class="nav__item">
                     <a href="./index.html" class="nav__link">
-                        <h2 class="font2--nav">Harper</h2>
+                        <h2 class="font2 font2--nav">Harper</h2>
                     </a>
                 </li>
                 <li class="nav__item">
@@ -64,76 +64,52 @@
         <section class="section icon-sec">
             <div class="wrapper icon-sec__block">
                 <div class="icon-sec__container">
-                    <div class="icon-sec__icon-container">
-                        <a href="#photos" class="icon-sec__link">
-                            <span class="icon-sec__icon icon-sec__icon--photos"></span>
-                        </a>
-                    </div>
-                    <div class="icon-sec__text-Container">
-                        <a href="#photos">
-                            <h3 class="font3">Photos</h3>
-                        </a>
-                        <p class="section__text">
-                            Lorem ipsum dolor sit, amet consectetur adip elit. Soluta, est magnam. Aliquid, optio?
-                            Qui minus quae tempora explicabo tenetur obcaecati. Debitis obcaecati id consequatur ullam
-                            ipsa.
-                        </p>
-                    </div>
+                    <a href="#photos" class="icon-sec__link">
+                        <span class="icon-sec__icon icon-sec__icon--photos"></span>
+                        <h3 class="font3 icon-sec__heading">Photos</h3>
+                    </a>
+                    <p class="section__text icon-sec__text">
+                        Lorem ipsum dolor sit, amet consectetur adip elit. Soluta, est magnam. Aliquid, optio?
+                        Qui minus quae tempora explicabo tenetur obcaecati. Debitis obcaecati id consequatur ullam
+                        ipsa.
+                    </p>
                 </div>
 
                 <div class="icon-sec__container">
-                    <div class="icon-sec__icon-container">
-                        <a href="#about" class="icon-sec__link">
-                            <span class="icon-sec__icon icon-sec__icon--about"></span>
-                        </a>
-                    </div>
-                    <div class="icon-sec__text-Container">
-                        <a href="#about">
-                            <h3 class="font3">About</h3>
-                        </a>
-                        <p class="section__text">
-                            Lorem ipsum dolor sit, amet consectetur adip elit. Soluta, est magnam. Aliquid, optio?
-                            Qui minus quae tempora explicabo tenetur obcaecati. Debitis obcaecati id consequatur ullam
-                            ipsa.
-                        </p>
-                    </div>
+                    <a href="#about" class="icon-sec__link">
+                        <span class="icon-sec__icon icon-sec__icon--about"></span>
+                        <h3 class="font3 icon-sec__heading">About</h3>
+                    </a>
+                    <p class="section__text icon-sec__text">
+                        Lorem ipsum dolor sit, amet consectetur adip elit. Soluta, est magnam. Aliquid, optio?
+                        Qui minus quae tempora explicabo tenetur obcaecati. Debitis obcaecati id consequatur ullam
+                        ipsa.
+                    </p>
                 </div>
             </div>
 
             <div class="wrapper icon-sec__block">
                 <div class="icon-sec__container">
-                    <div class="icon-sec__icon-container">
-                        <a href="#blog" class="icon-sec__link">
-                            <span class="icon-sec__icon icon-sec__icon--blog"></span>
-                        </a>
-                    </div>
-                    <div class="icon-sec__text-Container">
-                        <a href="#blog">
-                            <h3 class="font3">blog</h3>
-                        </a>
-                        <p class="section__text">
-                            Lorem ipsum dolor sit, amet consectetur adip elit. Soluta, est magnam. Aliquid, optio?
-                            Qui minus quae tempora explicabo tenetur obcaecati. Debitis obcaecati id consequatur ullam
-                            ipsa.
-                        </p>
-                    </div>
+                    <a href="#blog" class="icon-sec__link">
+                        <span class="icon-sec__icon icon-sec__icon--blog"></span>
+                        <h3 class="font3 icon-sec__heading">Blog</h3>
+                    </a>
+                    <p class="section__text icon-sec__text">
+                        Lorem ipsum dolor sit, amet consectetur adip elit. Soluta, est magnam. Aliquid, optio?
+                        Qui minus quae tempora explicabo tenetur obcaecati. Debitis obcaecati id consequatur ullam
+                        ipsa.
+                    </p>
                 </div>
                 <div class="icon-sec__container">
-                    <div class="icon-sec__icon-container">
-                        <a href="#contat" class="icon-sec__link">
-                            <span class="icon-sec__icon icon-sec__icon--contact"></span>
-                        </a>
-                    </div>
-                    <div class="icon-sec__text-Container">
-                        <a href="#contact">
-                            <h3 class="font3">Contact Me</h3>
-                        </a>
-                        <p class="section__text">
-                            Lorem ipsum dolor sit, amet consectetur adip elit. Soluta, est magnam. Aliquid, optio?
-                            Qui minus quae tempora explicabo tenetur obcaecati. Debitis obcaecati id consequatur ullam
-                            ipsa.
-                        </p>
-                    </div>
+                    <a href="#contact" class="icon-sec__link">
+                        <span class="icon-sec__icon icon-sec__icon--contact"></span>
+                        <h3 class="font3 icon-sec__heading">Contact Me</h3>
+                    </a>
+                    <p class="section__text icon-sec__text">
+                        Lorem ipsum dolor sit, amet consectetur adip elit. Soluta, est magnam. Aliquid, optio?
+                        Qui minus quae tempora explicabo tenetur obcaecati. Debitis obcaecati id consequatur ullam
+                        ipsa.
+                    </p>
                 </div>
             </div>
         </section>
@@ -168,9 +144,9 @@
                         aspernatur fuga mollitia debitis blanditiis voluptatibus voluptates quisquam repellat
                         perspiciatis recusandae. Iure!
                     </p>
-                        <div class="section__btn-container">
-                            <a href="#" class="section__btn">Read More</a>
-                        </div>
+                    <div class="section__btn-container">
+                        <a href="#" class="section__btn">Read More</a>
+                    </div>
                 </div>
                 <div class="blog-preview__container-2">
                     <img src="./img/home-image-4.jpg" alt="Photo of red brick industrial building" class="blog-preview__img-2">
@@ -186,7 +162,11 @@
                 <div class="harperjourney__text-container">
                     <h2 class="font2">Harper's Journey</h2>
                     <p class="section__text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta neque odio dolorem at impedit velit, amet quisquam libero possimus, accusantium dolores ipsum nesciunt eligendi, repellendus sequi voluptatem assumenda minima dolorum recusandae. Libero ut inventore vero sed quaerat adipisci labore voluptatibus quia deleniti! Hic totam consequuntur repellendus eos, laborum consectetur. Ex tempora accusamus vel doloribus?
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta neque odio dolorem at impedit
+                        velit, amet quisquam libero possimus, accusantium dolores ipsum nesciunt eligendi, repellendus
+                        sequi voluptatem assumenda minima dolorum recusandae. Libero ut inventore vero sed quaerat
+                        adipisci labore voluptatibus quia deleniti! Hic totam consequuntur repellendus eos, laborum
+                        consectetur. Ex tempora accusamus vel doloribus?
                     </p>
 
                     <a href="#" class="section__btn">Find Out More</a>
