--- a/blog.html
+++ b/blog.html
@@ -19,10 +19,11 @@
                     <a href="./index.html" class="nav__link">Home</a>
                 </li>
                 <li class="nav__item">
-                    <a href="#about" class="nav__link">About</a>
+                    <a href="./index.html#about" class="nav__link">About</a>
                 </li>
-                <li class="nav__item"><a href="./index.html" class="nav__link">
-                        <h2 class="font2--nav">Harper</h2>
+                <li class="nav__item">
+                    <a href="./index.html" class="nav__link">
+                        <h2 class=" font2 font2--nav">Harper</h2>
                     </a>
                 </li>
                 <li class="nav__item">
