Completed all page - Now to start responsive

--- a/contact.html
+++ b/contact.html
@@ -46,25 +46,25 @@
             <div class="wrapper contact__container">
                 <aside class="contact__aside">
                     <ul class="contact__social-media">
-                        <li>
+                        <li class="contact__sm-item">
                             <a href="http://facebook.com" class="contact__sm-link">
                                 <i class="fab fa-facebook-f"></i>
                                 <span class="visuallyhidden">Facebook</span>
                             </a>
                         </li>
-                        <li>
+                        <li class="contact__sm-item">
                             <a href="http://twitter.com" class="contact__sm-link">
                                 <i class="fab fa-twitter"></i>
                                 <span class="visuallyhidden">Twitter</span>
                             </a>
                         </li>
-                        <li>
+                        <li class="contact__sm-item">
                             <a href="http://linkedin.com" class="contact__sm-link">
                                 <i class="fab fa-linkedin-in"></i>
                                 <span class="visuallyhidden">LinkedIn</span>
                             </a>
                         </li>
-                        <li>
+                        <li class="contact__sm-item">
                             <a href="http://instagram.com" class="contact__sm-link">
                                 <i class="fab fa-instagram"></i>
                                 <span class="visuallyhidden">Instagram</span>
