--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 </head>
 
 <body>
+    <a href="#mainContent" class="skipLink">Skip to main content</a>
     <header class="header">
         <nav class="nav wrapper">
-
+            
             <input type="checkbox" id="toggle" name="toggle" class="toggle">
 
             <ul class="nav__mobile">
@@ -76,7 +77,7 @@
             </div>
         </div>
     </header>
-    <main>
+    <main id="mainContent">
         <section class="section whoisharper">
             <div class="whoisharper__container wrapper">
                 <div class="whoisharper__text-container">
@@ -208,19 +209,28 @@
         <section class="section photos" id="photos">
             <ul class="photos__container wrapper">
                 <li class="photos__item">
-                    <a href="" class="photos__link">
                         <img src="./img/home-image-6.jpg" alt="Photo of pink building" class="photos__photo">
-                    </a>
+                        <p class="photos__text">
+                            <a href="#" class="photos__link">
+                                View Pic
+                            </a>
+                        </p>
                 </li>
                 <li class="photos__item">
-                    <a href="" class="photos__link">
-                        <img src="./img/home-image-7.jpg" alt="Photo of flying plane" class="photos__photo">
-                    </a>
+                    <img src="./img/home-image-7.jpg" alt="Photo of flying plane" class="photos__photo">
+                    <p class="photos__text">
+                            <a href="#" class="photos__link">
+                                View Pic
+                            </a>
+                        </p>
                 </li>
                 <li class="photos__item">
-                    <a href="" class="photos__link">
-                        <img src="./img/home-image-8.jpg" alt="" class="photos__photo">
-                    </a>
+                    <img src="./img/home-image-8.jpg" alt="" class="photos__photo">
+                    <p class="photos__text">
+                            <a href="#" class="photos__link">
+                                View Pic
+                            </a>
+                        </p>
                 </li>
             </ul>
         </section>
