Project completed - clean up code next

--- a/blog.html
+++ b/blog.html
@@ -76,7 +76,7 @@
                 <aside class="blog__aside">
                     <div class="blog__aside-box">
                         <div class="blog__aside-img-container">
-                            <img src="./img/blog-image-2.jpg" alt="Woman in pink coat lying on a carpet next to a blue wall">
+                            <img src="./img/blog-image-2.jpg" alt="Woman in pink coat lying on a carpet next to a blue wall" class="blog__aside-img">
                         </div>
                         <h4 class="font4">About Harper</h4>
                         <p class="blog__aside-text">
@@ -165,26 +165,30 @@
                             impedit aliquam quam quasi minima totam nisi illum excepturi corrupti facere!
                         </p>
                     </div>
-                    <div class="blog__post-box blog__post-box--author">
+                    <div class="blog__post-box blog__post-box--author clearfix">
                         <div class="blog__post-img-container">
                             <img src="./img/blog-image-3.jpg" alt="Headshot of Maggie">
                         </div>
 
                         <p class="blog__post-text blog__post-text--author">
-                            <span class="blog__post-text-date ">Tuesday October 9th, 2018 by Maggie</span>
+                            <span class="blog__post-text-date ">
+                                <a href="#" class="blog__post-text-link">Tuesday October 9th, 2018 by Maggie</a> 
+                            </span>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut iste earum nisi ad, sit
                             eligendi quod quibusdam dolores debitis vel voluptatem distinctio id, obcaecati vitae
                             dolore omnis molestiae perspiciatis! In dignissimos veritatis tempora alias ipsa!
                         </p>
                     </div>
 
-                    <div class="blog__post-box blog__post-box--author blog__post-box--border">
+                    <div class="blog__post-box blog__post-box--author blog__post-box--border clearfix">
                         <div class="blog__post-img-container">
                             <img src="./img/blog-image-4.jpg" alt="Headshot of Maggie">
                         </div>
 
                         <p class="blog__post-text blog__post-text--author">
-                            <span class="blog__post-text-date ">Wednesday October 10th, 2018 by Daisy</span>
+                            <span class="blog__post-text-date ">
+                                <a href="#" class="blog__post-text-link">Wednesday October 10th, 2018 by Daisy</a>
+                                </span>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut iste earum nisi ad, sit
                             eligendi quod quibusdam dolores debitis vel voluptatem distinctio id, obcaecati vitae
                             dolore omnis molestiae perspiciatis! In dignissimos veritatis tempora alias ipsa!
